--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -64,37 +64,34 @@
     {% endunless %}
 
     {% for entry in site.data.contact %}
-      {% case entry.type %}
-        {% when 'github', 'twitter' %}
-          {%- capture url -%}
-            https://{{ entry.type }}.com/{{ site[entry.type].username }}
-          {%- endcapture -%}
-        {% when 'email' %}
+      {% capture url %}
+        {%- if entry.type == 'github' -%}
+          https://github.com/{{ site.github.username }}
+        {%- elsif entry.type == 'twitter' -%}
+          https://twitter.com/{{ site.twitter.username }}
+        {%- elsif entry.type == 'email' -%}
           {% assign email = site.social.email | split: '@' %}
-          {%- capture url -%}
-            javascript:location.href = 'mailto:' + ['{{ email[0] }}','{{ email[1] }}'].join('@')
-          {%- endcapture -%}
-        {% when 'rss' %}
-          {% assign url = '/feed.xml' | relative_url %}
-        {% else %}
-          {% assign url = entry.url %}
-      {% endcase %}
+          javascript:location.href = 'mailto:' + ['{{ email[0] }}','{{ email[1] }}'].join('@')
+        {%- elsif entry.type == 'rss' -%}
+          {{ "/feed.xml" | relative_url }}
+        {%- else -%}
+          {{ entry.url }}
+        {%- endif -%}
+      {% endcapture %}
 
       {% if url %}
       <a href="{{ url }}" aria-label="{{ entry.type }}"
-        {% assign link_types = '' %}
-
+        {% assign link_types = nil %}
         {% unless entry.noblank %}
+          {% assign link_types = link_types | append: " noopener" %}
           target="_blank"
-          {% assign link_types = 'noopener noreferrer' %}
         {% endunless %}
 
         {% if entry.type == 'mastodon' %}
-          {% assign link_types = link_types | append: ' me' | strip %}
+          {% assign link_types = link_types | append: " me" %}
         {% endif %}
 
-        {% unless link_types == empty %}rel="{{ link_types }}"{% endunless %}>
-
+        {% if link_types %}rel="{{ link_types | lstrip }}"{% endif %}>
         <i class="{{ entry.icon }}"></i>
       </a>
       {% endif %}
