--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -115,21 +115,13 @@ img {
   }
 
   @-webkit-keyframes fade-in {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
+    from { opacity: 0; }
+    to { opacity: 1; }
   }
 
   @keyframes fade-in {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
+    from { opacity: 0; }
+    to { opacity: 1; }
   }
 }
 
@@ -221,8 +213,7 @@ footer {
   }
 }
 
-i {
-  /* fontawesome icons */
+i { /* fontawesome icons */
   &.far,
   &.fas {
     @extend %no-cursor;
@@ -345,7 +336,7 @@ i {
 
   /* [scroll-focus] added by `smooth-scroll.js` */
   @at-root sup:target:not([scroll-focus]),
-    sup[scroll-focus="true"] > a#{&} {
+  sup[scroll-focus=true] > a#{&} {
     background-color: var(--footnote-target-bg);
   }
 }
@@ -398,7 +389,7 @@ i {
         }
       }
     } /* tbody */
-  } /* table */
+  }/* table */
 }
 
 /* --- post --- */
@@ -494,8 +485,7 @@ i {
       list-style-type: none;
       padding-left: 0;
 
-      > i {
-        /* checkbox icon */
+      > i { /* checkbox icon */
         width: 2rem;
         margin-left: -1.25rem;
         color: var(--checkbox-color);
@@ -575,25 +565,13 @@ i {
   }
 
   @-webkit-keyframes shimmer {
-    0% {
-      -webkit-transform: translateX(-100%);
-      transform: translateX(-100%);
-    }
-    100% {
-      -webkit-transform: translateX(100%);
-      transform: translateX(100%);
-    }
+    0% { -webkit-transform: translateX(-100%); transform: translateX(-100%); }
+    100% { -webkit-transform: translateX(100%); transform: translateX(100%); }
   }
 
   @keyframes shimmer {
-    0% {
-      -webkit-transform: translateX(-100%);
-      transform: translateX(-100%);
-    }
-    100% {
-      -webkit-transform: translateX(100%);
-      transform: translateX(100%);
-    }
+    0% { -webkit-transform: translateX(-100%); transform: translateX(-100%); }
+    100% { -webkit-transform: translateX(100%); transform: translateX(100%); }
   }
 }
 
@@ -659,8 +637,7 @@ i {
   @include no-text-decoration;
 }
 
-.tooltip-inner {
-  /* Overrided BS4 Tooltip */
+.tooltip-inner { /* Overrided BS4 Tooltip */
   font-size: 0.7rem;
   max-width: 220px;
   text-align: left;
@@ -729,8 +706,8 @@ $sidebar-display: "sidebar-display";
   }
 
   /* Hide scrollbar for IE, Edge and Firefox */
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 
   a {
     @extend %sidebar-links;
@@ -838,8 +815,7 @@ $sidebar-display: "sidebar-display";
           width: 100%;
         }
 
-        &::after {
-          /* the cursor */
+        &::after { /* the cursor */
           display: table;
           visibility: hidden;
           content: "";
@@ -861,8 +837,7 @@ $sidebar-display: "sidebar-display";
 
     @for $i from 1 through $tab-count {
       $offset: $tab-count - $i;
-      $top: (-$offset * $tab-height) +
-        (($tab-height - $tab-cursor-height) * 0.5);
+      $top: (-$offset * $tab-height) + (($tab-height - $tab-cursor-height) * 0.5);
 
       @if $i < $tab-count {
         > li.active:nth-child(#{$i}),
@@ -972,8 +947,7 @@ $sidebar-display: "sidebar-display";
 }
 
 #topbar {
-  i {
-    /* icons */
+  i { /* icons */
     color: #999999;
   }
 
@@ -1017,8 +991,7 @@ $sidebar-display: "sidebar-display";
   }
 }
 
-#search-cancel {
-  /* 'Cancel' link */
+#search-cancel { /* 'Cancel' link */
   color: var(--link-color);
   margin-left: 1rem;
   display: none;
@@ -1039,15 +1012,9 @@ $sidebar-display: "sidebar-display";
     background: center;
 
     &.form-control {
-      &::-moz-placeholder {
-        @include input-placeholder;
-      }
-      &::-webkit-input-placeholder {
-        @include input-placeholder;
-      }
-      &::placeholder {
-        @include input-placeholder;
-      }
+      &::-moz-placeholder { @include input-placeholder; }
+      &::-webkit-input-placeholder { @include input-placeholder; }
+      &::placeholder { @include input-placeholder; }
     }
   }
 }
@@ -1101,8 +1068,7 @@ $sidebar-display: "sidebar-display";
       margin-bottom: 1rem;
     }
 
-    i {
-      /* icons */
+    i { /* icons */
       color: #818182;
       margin-right: 0.15rem;
       font-size: 80%;
@@ -1300,9 +1266,7 @@ $sidebar-display: "sidebar-display";
   }
 
   #core-wrapper {
-    min-height: calc(
-      100vh - #{$topbar-height} - #{$footer-height-mobile}
-    ) !important;
+    min-height: calc(100vh - #{$topbar-height} - #{$footer-height-mobile}) !important;
 
     h1 {
       margin-top: 2.2rem;
@@ -1636,9 +1600,7 @@ $sidebar-display: "sidebar-display";
   }
 
   #search-wrapper {
-    margin-right: calc(
-      #{$main-content-max-width} * 0.25 - #{$search-max-width}
-    );
+    margin-right: calc(#{$main-content-max-width} * 0.25 - #{$search-max-width});
   }
 
   #topbar,
@@ -1653,9 +1615,7 @@ $sidebar-display: "sidebar-display";
   }
 
   #back-to-top {
-    right: calc(
-      (100vw - #{$sidebar-width-large} - #{$main-content-max-width}) / 2 + 2rem
-    );
+    right: calc((100vw - #{$sidebar-width-large} - #{$main-content-max-width}) / 2 + 2rem);
   }
 
   #sidebar {
