--- a/_includes/head.html
+++ b/_includes/head.html
@@ -112,4 +112,5 @@
   {% unless site.theme_mode %}
     {% include mode-toggle.html %}
   {% endunless %}
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9239499467871471" crossorigin="anonymous"></script>
 </head>
